--- a/Travelover/index.html
+++ b/Travelover/index.html
@@ -4,21 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css" />
     <title>Travelover</title>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header class="header">
         <div class="logo_box">
-            <!-- <img src="" alt="Logo" /> -->
+            <!-- <img src="" alt="Logo" class="logo" /> -->
         </div>
-        <div class="h_text_box">
+        <div class="text_box">
             <h1 class="heading_primary">
                 <span class="heading_primary_main">Travelover</span>
                 <span class="heading_primary_sub">여행을 사랑하는 사람들의 공간</span>
             </h1>
-            <a href="#" class="btn btn_white btn_animated">이번달 추천 여행</a>
+            <a href="#" class="btn btn_white btn_animated">여행지 모두 보기</a>
         </div>
     </header>
+    <main>
+        <section class="section_about">
+            <div class="u_center_text u_margin_bottom_big">
+                <h2 class="heading_secondary">이번달 추천 여행지</h2>
+            </div>
+            <div class="row">
+                <div class="col_1_of_2">
+                    <h3 class="heading_tertiary u_margin_bottom_small">자연과 사랑에 빠지다-!</h3>
+                    <p class="paragraph">
+                        겨울에도 온화한 날씨를 유지하는 미서부 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요! 
+                    </p>
+
+                    <h3 class="heading_tertiary u_margin_bottom_small">자연과 사랑에 빠지다-!</h3>
+                    <p class="paragraph">
+                        겨울에도 온화한 날씨를 유지하는 미서부 해변 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요! 
+                    </p>
+                    <a href="#" class="btn_text">더보기 &rarr;</a>
+                </div>
+                <div class="col_1_of_2">
+                    <div class="composition">
+                        <img src="img/la_hollywood.jpg" alt="hollywood" class="composition__photo composition__photo__p1" />
+                        <img src="img/la_santa_monica.JPG" alt="santa monica" class="composition__photo composition__photo__p2" />
+                        <img src="img/goldengate_bridge.JPG" alt="goldengate bridge" class="composition__photo composition__photo__p3" />
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
