Travelover travelover_미니 프로젝트_main_section작업하기2

--- a/Travelover/index.html
+++ b/Travelover/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Travelover</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/icon-font.css" />
 </head>
 <body>
     <header class="header">
@@ -45,6 +46,143 @@
                         <img src="img/goldengate_bridge.JPG" alt="goldengate bridge" class="composition__photo composition__photo__p3" />
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="section_features">
+            <div class="row">
+                <div class="col_1_of_4">
+                    <div class="feature_box">
+                        <i class="feature_box__icon icon-basic-world"></i>
+                        <h3 class="heading_tertiary u_margin_bottom_small">Explore the world</h3>
+                        <p class="feature_box__text">
+                            겨울에도 온화한 날씨를 유지하는 미서부 해변 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요!
+                        </p>
+                    </div>
+                </div>
+                <div class="col_1_of_4">
+                    <div class="feature_box">
+                        <i class="feature_box__icon icon-basic-compass"></i>
+                        <h3 class="heading_tertiary u_margin_bottom_small">Explore the world</h3>
+                        <p class="feature_box__text">
+                            겨울에도 온화한 날씨를 유지하는 미서부 해변 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요!
+                        </p>
+                    </div>
+                </div>
+                <div class="col_1_of_4">
+                    <div class="feature_box">
+                        <i class="feature_box__icon icon-basic-map"></i>
+                        <h3 class="heading_tertiary u_margin_bottom_small">Explore the world</h3>
+                        <p class="feature_box__text">
+                            겨울에도 온화한 날씨를 유지하는 미서부 해변 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요!
+                        </p>
+                    </div>
+                </div>
+                <div class="col_1_of_4">
+                    <div class="feature_box">
+                        <i class="feature_box__icon icon-basic-heart"></i>
+                        <h3 class="heading_tertiary u_margin_bottom_small">Explore the world</h3>
+                        <p class="feature_box__text">
+                            겨울에도 온화한 날씨를 유지하는 미서부 해변 투어를 해보는건 어떠신가요? 해변에서 여유있게 거닐고, 액티비티 체험을 통해 힐링해보세요!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section_tours">
+            <div class="u_center_text u_margin_bottom_big">
+                <h2 class="heading_secondary">베스트 투어 TOP3</h2>
+            </div>
+            <div class="row">
+                <div class="col_1_of_3">
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            <div class="card__picture card__picture_1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading_span card__heading_span_1">그라스에서 향수 만들기</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>당일 투어</li>
+                                    <li>최대 30명</li>
+                                    <li>조향사 3명</li>
+                                    <li>총 101명 참가</li>
+                                    <li>난이도 : 보통</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side__back card__side__back_1">
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_value">$93</p>
+                                </div>
+                                <a href="#" class="btn btn_white">예약하기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col_1_of_3">
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            <div class="card__picture card__picture_2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading_span card__heading_span_2">센트럴파크 조깅하기</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>당일 투어</li>
+                                    <li>최대 30명</li>
+                                    <li>조향사 3명</li>
+                                    <li>총 101명 참가</li>
+                                    <li>난이도 : 보통</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side__back card__side__back_2">
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_value">$93</p>
+                                </div>
+                                <a href="#" class="btn btn_white">예약하기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col_1_of_3">
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            <div class="card__picture card__picture_3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading_span card__heading_span_3">그라스에서 향수 만들기</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>당일 투어</li>
+                                    <li>최대 30명</li>
+                                    <li>조향사 3명</li>
+                                    <li>총 101명 참가</li>
+                                    <li>난이도 : 보통</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side__back card__side__back_3">
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_value">$93</p>
+                                </div>
+                                <a href="#" class="btn btn_white">예약하기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="u_center_text u_margin_bottom_big">
+                <a href="#" class="btn btn_mint">투어 모두 보기</a>
             </div>
         </section>
     </main>
