--- a/Travelover/index.html
+++ b/Travelover/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="./css/icon-font.css" />
 </head>
 <body>
+    <div class="navigation">
+        <input type="checkbox" id="navi_toggle" class="navigation__checkbox" />
+        <label for="navi_toggle" class="navigation__button">
+            <span class="navigation__icon"></span>
+        </label>
+        <div class="navigation__background">
+        </div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link">About Travelover</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">투어 모아보기</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">예약하기</a></li>
+            </ul>
+        </nav>
+    </div>
     <header class="header">
         <div class="logo_box">
             <img src="img/logo.png" alt="Logo" class="logo" />
@@ -18,7 +33,7 @@
                 <span class="heading_primary_main">Travelover</span>
                 <span class="heading_primary_sub">여행을 사랑하는 사람들의 공간</span>
             </h1>
-            <a href="#" class="btn btn_white btn_animated">여행지 모두 보기</a>
+            <a href="#section_tours" class="btn btn_white btn_animated">여행지 모두 보기</a>
         </div>
     </header>
     <main>
@@ -88,7 +103,7 @@
                 </div>
             </div>
         </section>
-        <section class="section_tours">
+        <section class="section_tours" id="section_tours">
             <div class="u_center_text u_margin_bottom_big">
                 <h2 class="heading_secondary">베스트 투어 TOP3</h2>
             </div>
@@ -117,7 +132,7 @@
                                 <div class="card__price_box">
                                     <p class="card__price_value">$93</p>
                                 </div>
-                                <a href="#" class="btn btn_white">예약하기</a>
+                                <a href="#popup" class="btn btn_white">예약하기</a>
                             </div>
                         </div>
                     </div>
@@ -146,7 +161,7 @@
                                 <div class="card__price_box">
                                     <p class="card__price_value">$93</p>
                                 </div>
-                                <a href="#" class="btn btn_white">예약하기</a>
+                                <a href="#popup" class="btn btn_white">예약하기</a>
                             </div>
                         </div>
                     </div>
@@ -175,7 +190,7 @@
                                 <div class="card__price_box">
                                     <p class="card__price_value">$93</p>
                                 </div>
-                                <a href="#" class="btn btn_white">예약하기</a>
+                                <a href="#popup" class="btn btn_white">예약하기</a>
                             </div>
                         </div>
                     </div>
@@ -291,5 +306,23 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/central_park_2.JPG" alt="센트럴파크" class="popup__img" />
+                <img src="img/central_park.JPG" alt="센트럴파크" class="popup__img" />
+            </div>
+            <div class="popup__right">
+                <a href="#section_tours" class="popup__close">&times;</a>
+                <h2 class="heading_secondary u_margin_bottom_small">투어 예약하기</h2>
+                <h3 class="heading_tertiary u_margin_bottom_small">예약 전 다음 사항을 체크해주세요-!</h3>
+                <p class="popup__text">
+                    본 투어는 봄~가을에 진행됩니다. 겨울에는 날씨가 많이 춥고, 눈이 오기 때문에 진행이 어렵습니다. 하루 3회 진행되며 시간은 6:00~8:00, 8:30~10:30, 4:00~6:00입니다. 4인 이상 신청 시 진행됩니다. 본 투어는 봄~가을에 진행됩니다. 겨울에는 날씨가 많이 춥고, 눈이 오기 때문에 진행이 어렵습니다. 하루 3회 진행되며 시간은 6:00~8:00, 8:30~10:30, 4:00~6:00입니다. 4인 이상 신청 시 진행됩니다. 
+                </p>
+                <a href="#" class="btn btn_mint">예약하기</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
