--- a/Travelover/index.html
+++ b/Travelover/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Travelover</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/icon-font.css" />
+    <link rel="stylesheet" href="./css/icon-font.css" /><!---->
 </head>
 <body>
     <div class="navigation">
